Ch - 49 Errors & Exceptions in JAVA
👉 Errors & Exceptions

No matter how smart we are, errors are our constant companions. With practice, we keep getting better at finding & correcting them.

👉 There are three types of errors in Java : 
1. Syntax errors
2. Logical errors
3. Runtime errors --> Also called Exceptions!

----------------------------------------------------------------------------------------------------------------------------------------

👉 Synatx errors :

When computer finds something wrong with our program it throws a syntax error.

CODE SNIPPET :

class SyntaxErrorDemo {
    public static void main(String[] args) {
        int a = 9
        a = a + 3;
        d = 4;   // variable not declared
    }
}

OUTPUT COMPILATION ERROR :

SyntaxErrorDemo.java:4: error: ';' expected
        int a = 9
                 ^
SyntaxErrorDemo.java:6: error: cannot find symbol
        d = 4;
        ^
  symbol:   variable d

----------------------------------------------------------------------------------------------------------------------------------------

👉 Logical errors :

A logical error or a bug occurs when a program compiles and runs but dows the wrong thing.

--> Message deliverd wrongly
--> Wrong time of chats being displayed
--> incorrect redirects!

CODE SNIPPET :

class LogicalErrorDemo {
    public static void main(String[] args) {
        int a = 10;
        int b = 5;

        int sum = a - b; // mistake (should be +)
        System.out.println("Sum is: " + sum);
    }
}

OUTPUT          : Sum is : 5
EXPECTED OUTPUT : Sum is : 15

----------------------------------------------------------------------------------------------------------------------------------------

👉 Runtime errors :

Java may sometimes enocounter an error while the program is running. These are also called exception! These are encountered due to 
circumstances like bad input or resource constraints.

CODE SNIPPET 1 : Division by Zero

class RuntimeErrorDemo {
    public static void main(String[] args) {
        int a = 10;
        int b = 0;

        int result = a / b;  // runtime error
        System.out.println(result);
    }
}

OUTPUT : Exception in thread "main" java.lang.ArithmeticException: / by zero

CODE SNIPPET 2 : Array Index Out of Bounds

class RuntimeErrorDemo2 {
    public static void main(String[] args) {
        int arr[] = {1, 2, 3};

        System.out.println(arr[5]); // invalid index
    }
}

OUTPUT : Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: 5

----------------------------------------------------------------------------------------------------------------------------------------

SUMMARY :
+---------------+--------------------+---------------+---------------+
| Error Type    | When it happens    | Program runs? | Example       |
+ ------------- + ------------------ + ------------- + ------------- +
| Syntax Error  | During compilation |  No           | Missing `;`   |
| Logical Error | After execution    |  Yes          | Wrong formula |
| Runtime Error | During execution   |  Crashes      | Divide by 0   |
+---------------+--------------------+---------------+---------------+

👉 Exceptions in JAVA

An Exception is an event that occurs when a program is executed disrupting the normal flow of instructions.
There are mainly two types of exceptions in Java :

1. Checked Exception -> Compile the exceptions (Handled by compiler)
2. Unchecked Exception -> Runtime exceptions

Commonly occuring Exceptions :

following are few commonly occuring exceptions in JAVA :
1. Null Pointers Exception
2. Arithmetic Exception
3. Array Index Out of Bound Exception
4. Illegal Argument Exception
5. Number format Exception

----------------------------------------------------------------------------------------------------------------------------------------

👉 In Java, a try-catch (exception handling) block is used to handle runtime errors (exceptions) so that your program doesn’t crash abruptly.

Basic Syntax 

try {
    // Code that may cause an exception
} catch (ExceptionType e) {
    // Code to handle the exception
}


Sample Code : 

public class Main {
    public static void main(String[] args) {
        try {
            int a = 10;
            int b = 0;
            int result = a / b;   // This will cause an exception
            System.out.println(result);
        } catch (ArithmeticException e) {
            System.out.println("Cannot divide by zero!");
        }
    }
}

----------------------------------------------------------------------------------------------------------------------------------------

👉 Handling Specific Exception in JAVA

In Java , We can handle specific exceptions by typing mulitple catch blocks

try{
    // code
}catch(I/O Exception e){
    // code
}catch(Arithmetic Exception e){
    // code
}catch(Exception e){
    // code
}

Sample Code :

import java.util.Scanner;

public class Errors{
    public static void main(String[] args){
        int [] arr = new int [3];
        arr[1] = 56;
        arr[0] = 50;
        arr[2] = 45;
        Scanner sc = new Scanner(System.in);
        System.out.println("Enter the array index");
        int ind = sc.nextInt();
        System.out.println("Enter the number , you want to divide with : ");
        int num = sc.nextInt();
        try{
            System.out.println("The value at array index entered is : "+arr[ind]);
            System.out.println("The value of array value divided by number is : " + arr[ind]/num);
        }catch(ArithmeticException e){
            System.out.println("ArithmeticException : "+e);
        }catch(ArrayIndexOutOfBoundsException e){
            System.out.println("ArrayIndexOutOfBoundsException : "+e);
        }catch(Exception e){
            System.out.println("Some other exception occurred : "+e);
        }
    }
}

👉 OUTPUT 1 :

Enter the array index
4
Enter the number , you want to divide with : 
3
ArrayIndexOutOfBoundsException : java.lang.ArrayIndexOutOfBoundsException: Index 4 out of bounds for length 3

Process finished with exit code 0

👉 OUTPUT 2 : 

Enter the array index
2
Enter the number , you want to divide with : 
0
The value at array index entered is : 45
ArithmeticException : java.lang.ArithmeticException: / by zero

Process finished with exit code 0

----------------------------------------------------------------------------------------------------------------------------------------

👉 Nested try-catch

Nested try-catch in Java simply means placing one try-catch block inside another. This is useful when different parts of your code may throw different types of exceptions and you want to handle them separately.

Basic Idea
Inner try-catch → handles specific exceptions locally
Outer try-catch → acts as a backup (handles exceptions not caught inside)

Syntax :

try{
    try{
        }catch(Exp e){
        }
    }
catch(Exp e){
        }

Similarly , we can furthur nest try catch blocks inside the nested try catch blocks.

Sample Code :

public class NestedTryExample {
    public static void main(String[] args) {
        try {
            // Outer try block

            int arr[] = {1, 2, 3};

            try {
                // Inner try block
                System.out.println(arr[5]); // ArrayIndexOutOfBoundsException
            } catch (ArrayIndexOutOfBoundsException e) {
                System.out.println("Inner catch: Array index is out of bounds");
            }

            try {
                int result = 10 / 0; // ArithmeticException
            } catch (ArithmeticException e) {
                System.out.println("Inner catch: Cannot divide by zero");
            }

        } catch (Exception e) {
            System.out.println("Outer catch: Some exception occurred");
        }

        System.out.println("Program continues...");
    }
}

👉 How it works

1. Java first executes the inner try block
2. If an exception occurs:
    It checks the nearest catch (inner one)
    If matched → handled there
3. If not handled inside:
    It goes to the outer catch block
4. Program continues after handling

👉 Key Points

1. Inner try-catch is used for fine-grained error handling
2. Outer try-catch is used for general or fallback handling
3. You can nest multiple levels, but too much nesting makes code messy
4. Always catch specific exceptions first, then general ones

----------------------------------------------------------------------------------------------------------------------------------------
